--- a/newFolder/package.json
+++ b/newFolder/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "node index"
+    "test": "jest",
+    "start": "node index"
   },
   "author": "NKululeko",
   "license": "ISC",
   "dependencies": {
-    "express": "4.16.4"
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
+    "express": "4.16.4",
+    "node-fetch": "^2.5.0"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
